# ai-engineering

./: .coverage  .editorconfig  .gitattributes  .gitignore  .gitleaks.toml  .gitleaksignore  .semgrep.yml  AGENTS.md  CHANGELOG.md  CLAUDE.framework.md  CLAUDE.local.md.example  CLAUDE.md  CODE_OF_CONDUCT.md  CONSTITUTION.md  CONTRIBUTING.md  DEPRECATIONS.json  GEMINI.md  GETTING_STARTED.md  LICENSE  README.md  RELEASE_NOTES_v3.0.0-alpha.0.md  SECURITY.md  UPGRADING.md  ai-engineering.toml  biome.json  codex.md  config.yaml  eslint.config.js  install.ps1  install.sh  lefthook.yml  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  sonar-project.properties  tsconfig.base.json  tsconfig.json  tsup.config.ts  vitest.config.ts
.agents/agents/: ai-autopilot.md  ai-build.md  ai-explore.md  ai-explorer.md  ai-guard.md  ai-guide.md  ai-operate.md  ai-plan.md  ai-review.md  ai-simplifier.md  ai-simplify.md  ai-verify.md  review-context-explorer.md  reviewer-backend.md  verifier-feature.md
.ai-engineering/: .version  CONSTITUTION.md  GOVERNANCE_SOURCE.md  LESSONS.md  README.md  config.yml  manifest.yml
.ai-engineering/agents/: api-designer.md  architect.md  build.md  code-simplifier.md  codebase-mapper.md  database-engineer.md  debugger.md  devops-engineer.md  execute.md  explorer.md  frontend-specialist.md  guard.md  observe.md  operate.md  orchestrator.md  plan.md  platform-auditor.md  pr-reviewer.md  principal-engineer.md  quality-auditor.md  release.md  review.md  scan.md  security-reviewer.md  ship.md  test-master.md  triage.md  verify-app.md  verify.md  write.md
.ai-engineering/context/: learnings.md  multi-ide-test-matrix.md
.ai-engineering/contexts/: cli-ux.md  gate-policy.md  project-identity.md  python-env-modes.md  sentinel-iocs-update.md  session-governance.md  spec-schema.md  stack-context.md  step-zero-protocol.md
.ai-engineering/evals/: .gitignore  README.md  baseline.json  registry.json
.ai-engineering/hooks/: blocklist.sh  post-tool.sh  pre-tool.sh
.ai-engineering/instincts/: context.md  instincts.yml  meta.json  proposals.md
.ai-engineering/knowledge/: anti-patterns.md  learnings.md  patterns.md
.ai-engineering/notes/: adoption-s2-commit-pr-speed.md  adoption-s3-unified-gate-risk-accept.md  adoption-s4-skills-consolidation-architecture.md  adoption-s5-mcp-sentinel-ide-parity.md  ndjson-hook-write-windows-lock-gap.md  spec-101-frozen-pr463.md  spec-126-cleanup-history-backfill.md  spec-B-tree-display-redesign.md  spec-C-manifest-source-of-truth.md  spec-D-shallow-verify-checks.md
.ai-engineering/observations/: meta.json  observations.yml  proposals.md
.ai-engineering/policies/: .manifest  .signatures.json  (+6 more)
.claude/: ecc-tools.json  hooks  identity.json  settings.json  settings.local.json.bak
.codex/: AGENTS.md  hooks.json
.gemini/: GEMINI.md  settings.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  labels.yml  pull_request_template.md
agents/: _base.md  code-explain.md  code-simplifier.md  developer.md  reviewer.md  verify-app.md
context/: architecture.md  glossary.md  hooks.md  project.md  stack.md
docs/: PRODUCTION_READINESS.md  agentsview-source-contract.md  ai-engineering-auditoria-diagramas.md  anti-patterns.md  ci-alpine-smoke.md  cli-reference.md  conformance-report.md  copilot-subagents.md  design.pen  solution-intent.md  submodule-approach.md  trabajo-humano-era-ai-native-2026-2031.md  untitled.pen
docs-site/: .gitignore  README.md  astro.config.mjs  package.json
evals/: baseline.json
learnings/: dotnet.md  global.md  terraform.md  typescript.md
pipelines/: ci.yml  quality-gate.yml  security.yml
python/ai_eng_evals/: pyproject.toml
python/ai_eng_evals/src/ai_eng_evals/: __init__.py
python/ai_eng_hooks/: pyproject.toml
python/ai_eng_hooks/src/ai_eng_hooks/: __init__.py  input_guard.py
python/ai_eng_hooks/tests/: test_input_guard.py
python/ai_eng_litellm_bridge/: Dockerfile  docker-compose.yml  pyproject.toml
python/ai_eng_litellm_bridge/src/ai_eng_litellm_bridge/: __init__.py  __main__.py  cli.py  router.py  server.py
python/ai_eng_litellm_bridge/tests/: test_cli.py  test_dockerfile.py  test_router.py  test_server.py
schemas/: config.schema.json
scripts/: audit_function_size.py  check_opa_coverage.py  check_test_mapping.py  check_workflow_policy.py  clean-install-test.sh  dev-setup.ps1  dev-setup.sh  install.sh  run_loop_skill_evals.py  skill-audit.sh  sync_command_mirrors.py  work_items_backfill.py  work_items_backfill.yml  work_items_validate.py
standards/: api-design.md  cicd.md  dotnet.md  global.md  python.md  quality-gates.md  security.md  terraform.md  testing.md  typescript.md
tests/: conftest.py  fakes.py  test_cli.py
wiki/: Advanced-MCP-Integration.md  Advanced-Parallel-Work.md  Advanced-Plan-Mode.md  Advanced-Submodule-Approach.md  Agents-Overview.md  Agents-code-architect.md  Agents-code-simplifier.md  Agents-doc-generator.md  Agents-oncall-guide.md  Agents-verify-app.md  CI-CD-Azure-Pipelines.md  CI-CD-Copilot-Integration.md  CI-CD-GitHub-Actions.md  Core-Concepts-CLAUDE-md.md  Core-Concepts-Overview.md  Core-Concepts-Production-Reliability.md  Core-Concepts-Three-Layer-Architecture.md  Customization-Custom-Agents.md  Customization-Custom-Hooks.md  Customization-Custom-Skills.md  Customization-Custom-Standards.md  FAQ.md  Getting-Started.md  Home.md  Hooks-Claude-Code-Hooks.md  Hooks-Git-Hooks.md  Hooks-Overview.md  Installation-Manual-Setup.md  Installation-Quick-Install.md  Installation-Tool-Installation.md  Installation-Updating.md  Migration-Breaking-Changes.md  Migration-Changelog.md  Migration-Upgrading.md  Skills-Code-Quality.md  Skills-Daily-Workflow.md  Skills-Documentation.md  Skills-Overview.md  Skills-Security.md  Standards-By-Stack.md  (+5 more)
workshop/: 00-introduction.md  01-installation.md  02-first-commands.md  03-standards-and-learnings.md  04-agents.md  05-quality-gates.md  06-cicd-integration.md  07-customization.md  08-advanced-workflows.md  09-boris-cherny-workflow.md  10-versioning.md
(+4369 files in other folders)
