[project]
name = "ai-engineering"
version = "0.4.0"
description = "AI governance framework for secure software delivery"
authors = [{ name = "ai-engineering maintainers" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12.0,<1.0",
  "pyyaml>=6.0,<7.0",
  "pydantic>=2.0,<3.0",
  "keyring>=25.0,<26.0",
  "rich>=13.0,<15.0",
  "questionary>=2.0,<3.0",
  "ruamel-yaml>=0.18,<1.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0,<10.0",
  "pytest-cov>=4.1,<8.0",
  "ruff>=0.6.0",
  "ty>=0.0.1a1",
  "pip-audit>=2.7.0",
  "types-pyyaml>=6.0,<7.0",
  "pytest-xdist>=3.5,<4.0",
  "python-semantic-release>=9.0,<10",
]

# === USER CONFIGURATION: Enterprise Artifact Feed ===
#
# If your organization uses a private package feed (Azure Artifacts, JFrog
# Artifactory, Nexus), uncomment and configure the section below.
#
# This enables "distribution lock": ALL packages resolve from your private
# feed only — no fallback to public PyPI.
#
# Authentication: uses system keyring (cross-platform).
#   macOS:   Keychain Access
#   Windows: Credential Manager
#   Linux:   Secret Service (GNOME Keyring / KWallet)
#
# Setup:
#   1. Store credentials: keyring set <feed-url> <username>
#   2. Enable uv keyring: export UV_KEYRING_PROVIDER=subprocess
#   3. Uncomment ONE of the provider blocks below and fill in your values.
#
# In CI (no keyring available), use environment variables instead:
#   UV_INDEX_CORPORATE_USERNAME=<user>
#   UV_INDEX_CORPORATE_PASSWORD=<token>
#
# --- Azure Artifacts ---
# [[tool.uv.index]]
# name = "corporate"
# url = "https://pkgs.dev.azure.com/ORG/PROJECT/_packaging/FEED/pypi/simple/"
# default = true  # replaces PyPI as the default package source
#
# --- JFrog Artifactory ---
# [[tool.uv.index]]
# name = "corporate"
# url = "https://COMPANY.jfrog.io/artifactory/api/pypi/REPO/simple/"
# default = true  # replaces PyPI as the default package source
#
# --- Nexus Repository ---
# [[tool.uv.index]]
# name = "corporate"
# url = "https://nexus.company.com/repository/REPO/simple/"
# default = true  # replaces PyPI as the default package source
#
# IMPORTANT: Do NOT add a pypi.org entry. Omitting it enforces distribution
# lock — uv will only resolve from your private feed.
#
# === END USER CONFIGURATION ===

[project.scripts]
ai-eng = "ai_engineering.cli:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "C4", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["ai_engineering"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
markers = [
  "unit: Pure logic tests, no I/O, fast (<1s per test)",
  "integration: Tests with local I/O (filesystem, git)",
  "e2e: End-to-end flows (install, CLI, hooks)",
  "live: External API tests (requires AI_ENG_LIVE_TEST=1)",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
commit_parser = "conventional"
tag_format = "v{version}"
major_on_zero = false
changelog_file = false

[tool.semantic_release.branches.main]
match = "main"

[tool.semantic_release.commit_parser_options]
allowed_types = ["feat", "fix", "perf", "refactor", "style", "docs", "test", "build", "ci", "chore", "revert"]
minor_types = ["feat"]
patch_types = ["fix", "perf"]

[tool.hatch.build.targets.wheel]
packages = ["src/ai_engineering"]
include = [
  "src/ai_engineering/templates/**/*.md",
  "src/ai_engineering/templates/**/*.yml",
  "src/ai_engineering/templates/**/*.json",
  "src/ai_engineering/version/registry.json",
]
