[project]
name = "ai-engineering"
version = "3.0.0-alpha.0"
description = "Python side of ai-engineering: hooks, evals, LiteLLM bridge + legacy v2 shim"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "ai-engineering contributors" }]
readme = "README.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_engineering"]

[tool.uv.workspace]
members = ["python/*"]

[tool.uv]
dev-dependencies = [
  "pytest>=8.3.0",
  "pytest-cov>=6.0.0",
  "pytest-asyncio>=0.25.0",
  "hypothesis>=6.122.0",
  "ruff>=0.8.0",
  "ty>=0.0.1",
  "pytest-xdist>=3.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"
exclude = [
  ".venv",
  "node_modules",
  "dist",
  "build",
  ".ai-engineering/state",
]

[tool.ruff.lint]
select = [
  "E", "W",   # pycodestyle
  "F",        # pyflakes
  "I",        # isort
  "B",        # bugbear
  "UP",       # pyupgrade
  "S",        # bandit (security)
  "SIM",      # simplify
  "RUF",      # ruff-specific
  "C90",      # mccabe complexity
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = ["S101"]  # asserts allowed in tests
"test_*.py" = ["S101"]

[tool.pytest.ini_options]
testpaths = ["python"]
python_files = ["test_*.py"]
addopts = [
  "--strict-markers",
  "--strict-config",
  "-ra",
  "--cov=python",
  "--cov-branch",
  "--cov-report=term-missing",
  "--cov-fail-under=80",
]
asyncio_mode = "auto"
