[project]
name = "ai-engineering"
version = "0.4.0"
description = "AI governance framework for secure software delivery"
authors = [{ name = "ai-engineering maintainers" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12.0,<1.0",
  "pyyaml>=6.0,<7.0",
  "pydantic>=2.0,<3.0",
  "keyring>=25.0,<26.0",
  "rich>=13.0,<15.0",
  "questionary>=2.0,<3.0",
  "ruamel-yaml>=0.18,<1.0",
  "packaging>=24.0,<27.0",
]

[project.optional-dependencies]
# spec-118 memory layer; opt-in via `uv sync --extra memory`. Kept out of the
# core deps so hook scripts (which must run without pip install) and minimal
# CI lanes do not pay the fastembed/hdbscan footprint.
#
# Approximate marginal cost on adoption (verify in your own environment for
# regulated-industry vendor review — see spec-118 § Footprint):
#   sqlite-vec       ~6 MB site-packages (compiled extension)
#   fastembed        ~30 MB site-packages (onnxruntime + tokenizers)
#   hdbscan + numpy  ~65 MB site-packages (numpy dominates)
#   ONNX model cache ~130 MB at ~/.cache/huggingface after `ai-eng memory warmup`
# Total: ~230 MB site-packages + ~130 MB model cache.
memory = [
  "sqlite-vec>=0.1,<0.2",
  "fastembed>=0.3,<0.5",
  "hdbscan>=0.8,<1.0",
  "numpy>=1.26,<3.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0,<10.0",
  "pytest-cov>=4.1,<8.0",
  "ruff>=0.6.0",
  "ty>=0.0.1a1",
  "pip-audit>=2.7.0",
  "types-pyyaml>=6.0,<7.0",
  "pytest-xdist>=3.5,<4.0",
  "python-semantic-release>=9.0,<10",
]

# === USER CONFIGURATION: Enterprise Artifact Feed ===
#
# If your organization uses a private package feed (Azure Artifacts, JFrog
# Artifactory, Nexus), uncomment and configure the section below.
#
# This enables "distribution lock": ALL packages resolve from your private
# feed only — no fallback to public PyPI.
#
# Authentication: uses system keyring (cross-platform).
#   macOS:   Keychain Access
#   Windows: Credential Manager
#   Linux:   Secret Service (GNOME Keyring / KWallet)
#
# Setup:
#   1. Store credentials: keyring set <feed-url> <username>
#   2. Enable uv keyring: export UV_KEYRING_PROVIDER=subprocess
#   3. Uncomment ONE of the provider blocks below and fill in your values.
#
# In CI (no keyring available), use environment variables instead:
#   UV_INDEX_CORPORATE_USERNAME=<user>
#   UV_INDEX_CORPORATE_PASSWORD=<token>
#
# --- Azure Artifacts ---
# [[tool.uv.index]]
# name = "corporate"
# url = "https://pkgs.dev.azure.com/ORG/PROJECT/_packaging/FEED/pypi/simple/"
# default = true  # replaces PyPI as the default package source
#
# --- JFrog Artifactory ---
# [[tool.uv.index]]
# name = "corporate"
# url = "https://COMPANY.jfrog.io/artifactory/api/pypi/REPO/simple/"
# default = true  # replaces PyPI as the default package source
#
# --- Nexus Repository ---
# [[tool.uv.index]]
# name = "corporate"
# url = "https://nexus.company.com/repository/REPO/simple/"
# default = true  # replaces PyPI as the default package source
#
# IMPORTANT: Do NOT add a pypi.org entry. Omitting it enforces distribution
# lock — uv will only resolve from your private feed.
#
# === END USER CONFIGURATION ===

[project.scripts]
ai-eng = "ai_engineering.cli:app"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["tests/fixtures/**/*.json"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "C4", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["ai_engineering"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
markers = [
  "unit: Pure logic tests, no I/O, fast (<1s per test)",
  "integration: Tests with local I/O (filesystem, git)",
  "e2e: End-to-end flows (install, CLI, hooks)",
  "live: External API tests (requires AI_ENG_LIVE_TEST=1)",
  "perf: Performance benchmarks (spec-104 G-1/G-2/G-3); CI nightly only, opt-in via -m perf",
  "spec_105_red: spec-105 RED tests; excluded by default until corresponding GREEN phase commits",
  "spec_106_red: spec-106 RED tests; excluded by default until corresponding GREEN phase commits",
  "spec_107_red: spec-107 RED tests; excluded by default until corresponding GREEN phase commits",
  "memory: spec-118 memory layer unit/integration tests; opt-in via -m memory; requires `uv sync --extra memory`",
  "memory_slow: spec-118 memory layer tests that load the real fastembed model; opt-in via -m memory_slow",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
commit_parser = "conventional"
tag_format = "v{version}"
major_on_zero = false
changelog_file = false

[tool.semantic_release.branches.main]
match = "main"

[tool.semantic_release.commit_parser_options]
allowed_types = ["feat", "fix", "perf", "refactor", "style", "docs", "test", "build", "ci", "chore", "revert"]
minor_types = ["feat"]
patch_types = ["fix", "perf"]

[tool.hatch.build.targets.wheel]
packages = ["src/ai_engineering"]
include = [
  "src/ai_engineering/templates/**/*.md",
  "src/ai_engineering/templates/**/*.yml",
  "src/ai_engineering/templates/**/*.json",
  "src/ai_engineering/version/registry.json",
]
