[project]
name = "ai-eng-evals"
version = "3.0.0a0"
description = "CLEAR framework eval runners for ai-engineering skills"
requires-python = ">=3.13"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_eng_evals"]
