[project]
name = "ai-eng-litellm-bridge"
version = "3.0.0a0"
description = "Docker-isolated LiteLLM HTTP bridge for ai-engineering multi-LLM routing"
requires-python = ">=3.13"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_eng_litellm_bridge"]
